--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,9 +30,23 @@ tokio = { version = "1.40", features = ["full"] }
 rand = "0.8.4"
 anyhow = "1.0.43"
 chrono = "0.4.42"
-open = "5.0"
+open = { version = "5.0", optional = true }
 self_update = { version = "0.41", features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"] }
 openssl = { version = "0.10", optional = true }
+env_logger = "0.11"
+
+# Librespot for local playback (optional)
+librespot-core = { version = "0.6", optional = true }
+librespot-playback = { version = "0.6", optional = true, features = ["rodio-backend"] }
+url = { version = "2.5.7", optional = true }
+sha2 = { version = "0.10", optional = true }
+base64 = { version = "0.22", optional = true }
+urlencoding = { version = "2.1", optional = true }
+reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }
+
+[features]
+default = ["librespot"]
+librespot = ["librespot-core", "librespot-playback", "dep:open", "dep:url", "dep:sha2", "dep:base64", "dep:urlencoding", "dep:reqwest"]
 
 [target.'cfg(target_env = "musl")'.dependencies]
 openssl-sys = { version = "0.9", features = ["vendored"] }
